stopgap improvement for handling duplicate emails/usernames

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -783,16 +783,10 @@ input#id_expiration_year {
 	margin-left: 15px;
 }
 
-ul.errorlist,u {
-	background-color: #f2dede;
-	list-style-type: none;
-	padding-left: 20px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	padding: 15px;
-	margin-bottom: 20px;
-	border: 1px solid transparent;
-	border-radius: 4px;
+ul.errorlist, u {
+	color: red;
+	font-size: .8em;
+    margin-left: .2em;
 }
 
 .reservation-list-item {
